microblog/k8s/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: microblog-ingress-tls
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
    kubernetes.io/ingress.global-static-ip-name: microblog
  labels:
    app: microblog
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: microblog
          servicePort: 5000
  tls:
  - hosts:
    - microblog.fnf.ninja
    secretName: microblog-fnf-ninja-tls
